src/test/deca/syntax/invalid/int_trop_grand.deca
// Description:
//    Le int est trop grand
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
println(7777777777777777777777777777777777777777777777777777777777777777);
}
